test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-hudai-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx  # Updated field to specify the Ingress class
  rules:
    - host: test.hudai.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
  tls:
    - hosts:
        - test.hudai.info
      secretName: test-hudai-tls  # Make sure the Secret name matches the one you created
